--- a/.github/workflows/gh-pages-commit.yml
+++ b/.github/workflows/gh-pages-commit.yml
@@ -20,6 +20,21 @@ jobs:
           hugo-version: '0.79.0'
           extended: true
 
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14.x'
+
+      - name: Cache dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - run: npm ci
+
       - name: Build
         run: hugo --minify
 
