--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "postcss": "^8.2.1",
     "tailwindcss": "^2.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "postcss-cli": "^8.3.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
