--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
-    "postcss-cli": "^8.3.1"
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
