--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://limityjsmemy.github.io/ljmtailwind"
 title = "Blonde"
 author = "wamo"
 languageCode = "en"
