--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "blonde",
-  "version": "1.0.0",
-  "description": "",
+  "private": true,
   "main": "tailwind.config.js",
   "dependencies": {
     "autoprefixer": "^10.1.0",
@@ -11,14 +9,5 @@
   "devDependencies": {
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com-aighul-dhabati:LimityJsmeMy/ljmtailwind.git"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
