--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ DefaultContentLanguage = "en"
 enableInlineShortcodes = true
 theme = "Blonde"
 enableRobotsTXT = true
+buildFuture = true
 
 # Please enable this feature if the site is available in Japanese, Chinese or Korean.
 #hasCJKLanguage = true
