--- a/config.toml
+++ b/config.toml
@@ -50,6 +50,13 @@ archive_dropdown = "false"
     url = "/contact/"
     weight = 3
 
+  [[menu.main]]
+    identifier = "newsletter"
+    name = "Odebírej náš newsletter"
+    url = "/#newsletter-box"
+    pre = "<svg xmlns = 'http://www.w3.org/2000/svg' width = '20' height = '20' viewBox = '0 0 24 24' fill = 'none' stroke = '#000000' stroke-width= '2' stroke-linecap = 'round' stroke-linejoin = 'round'><path d = 'M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z'></path><polyline points = '22,6 12,13 2,6'></polyline></svg>"
+    weight = 3
+
 [taxonomies]
 category = "categories"
 tag = "tags"
