--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "private": true,
   "main": "tailwind.config.js",
-  "dependencies": {
-    "autoprefixer": "^10.1.0",
-    "postcss": "^8.2.1",
-    "tailwindcss": "^2.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1",
-    "postcss-import": "^14.0.0"
+    "postcss-import": "^14.0.0",
+    "tailwindcss": "^2.0.3"
   }
 }
