--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "main": "tailwind.config.js",
-  "dependencies": {},
+  "dependencies": {
+    "@tailwindcss/typography": "^0.4.0"
+  },
   "devDependencies": {
     "autoprefixer": "^10.2.4",
     "postcss": "^8.2.6",
