--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://limityjsmemy.github.io/ljmtailwind"
+baseURL = "https://limityjsmemy.github.io/limityjsmemy.cz"
 title = "Blonde"
 author = "wamo"
 languageCode = "cs"
